[tool.poetry]
name = "demo-tts"
version = "0.1.0"
description = ""
authors = ["Ly Nguyen <lyntc.elec@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = ""}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
